# tvim

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
src/: main.cpp
tvim/: __init__.py  grid.py
